@@ -15,6 +15,7 @@ import javax.persistence.NoResultException;
 import javax.persistence.PersistenceContext;
 import javax.persistence.Query;
 import javax.transaction.UserTransaction;
+import javax.xml.bind.DatatypeConverter;
 
 @Named
 @SessionScoped
@@ -66,17 +67,15 @@ public class AdminBean implements Serializable {
     }
 
     private String hashString(String password) {
-        return Base64.getEncoder().encodeToString(hash(password));
+        return DatatypeConverter.printHexBinary(hash(password));
     }
 
     private byte[] hash(String password) {
-        String saltedPwd = new StringBuilder()
-                .append(password)
-                .toString();
+
         try {
             return MessageDigest
                     .getInstance("SHA-256")
-                    .digest(saltedPwd.getBytes("UTF-8"));
+                    .digest(password.getBytes("UTF-8"));
         } catch (NoSuchAlgorithmException | UnsupportedEncodingException ex) {
             throw new IllegalStateException("Error in the static setup of the Hashing-Algorithm");
         }
